WIP building RAML Document from input YAML/RAML

--- a/Test.YAML.Net/Test.YAML.Net.csproj
+++ b/Test.YAML.Net/Test.YAML.Net.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\RAML.Net\RAML.Net.csproj" />
     <ProjectReference Include="..\YAML.Net\YAML.Net.csproj" />
   </ItemGroup>
 
