--- a/RAML.Net/RAML.Net.csproj
+++ b/RAML.Net/RAML.Net.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
+    <PackageReference Include="Newtonsoft.Json.Schema" Version="3.0.1" />
+    <PackageReference Include="System.Dynamic.Runtime" Version="4.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\YAML.Net\YAML.Net.csproj" />
   </ItemGroup>
 
